--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,6 @@ LazyData: true
 biocViews: 
 Imports: 
     VariantAnnotation,
-    BSgenome.Hsapiens.UCSC.hg38,
-    BSgenome.Hsapiens.1000genomes.hs37d5,
-    BSgenome.Mmusculus.UCSC.mm10,
-    BSgenome.Cfamiliaris.UCSC.canFam3,
     SummarizedExperiment,
     BiocGenerics,
     GenomeInfoDb,
@@ -36,4 +32,9 @@ Imports:
     GenomicRanges,
     IRanges,
     BSgenome
-RoxygenNote: 6.1.1
+Suggests:
+    BSgenome.Hsapiens.UCSC.hg38,
+    BSgenome.Hsapiens.1000genomes.hs37d5,
+    BSgenome.Mmusculus.UCSC.mm10,
+    BSgenome.Cfamiliaris.UCSC.canFam3,
+RoxygenNote: 7.1.0
